added more stuff

--- a/created.html
+++ b/created.html
@@ -99,11 +99,11 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>John<span class="glyphicon glyphicon-ok-circle pull-right check-icon"></span>
+                                    <td>John<span class="progress_table fn" data-per="1.0" id="e"></span></span>
                                     </td>
-                                    <td>Smth</td>
-                                    <td>Hangzhou</td>
-                                    <td>Infections</td>
+                                    <td>Smth <span class="progress_table fn" data-per="0.2" id="f"></span></td>
+                                    <td>Hangzhou <span class="progress_table fn" data-per="0.4" id="g"></span></td>
+                                    <td>Infections <span class="progress_table fn" data-per="0.5" id="i"></span></td>
                                     <td>79%</td>
                                     <td>
                                         <label class="custom-control custom-checkbox">
@@ -906,7 +906,6 @@
     })
     ;
 </script>
-
 
 </body>
 </html>
